# assignment_model-alignment

./: .gitpod.yml  CMakeLists.txt  LICENSE  README.md
app/conf/: pose-1.ini  pose-2.ini  pose-3.ini  pose-4.ini  pose-5.ini
app/scripts/: assignment_model-alignment-icubSim.xml  assignment_model-alignment-system.xml  assignment_vision-icubSim.xml  assignment_vision-system.xml
gazebo/models/assignment_model-alignment-icub_head_epr/: model.config  model.urdf
gazebo/models/assignment_model-alignment-mustard_bottle/: model.config  model.sdf
gazebo/models/assignment_model-alignment-table/: model.config  model.sdf
gazebo/models/mustard_bottle/meshes/: mesh.stl
gazebo/worlds/: assignment-model-alignment.sdf  assignment-vision.sdf
smoke-test/: CMakeLists.txt  post-test.sh  pre-test.sh  test.cpp  test.xml
smoke-test/fixtures/: fixture.xml
src/: CMakeLists.txt  main.cpp  rpc.thrift  segmentation.h  viewer.h  world.cpp
